# application/product/api/product/v1/create_product.pb.go
@@ -1,150 +1,0 @@
-// Code generated by protoc-gen-go. DO NOT EDIT.
-// versions:
-// 	protoc-gen-go v1.35.1
-// 	protoc        v5.28.3
-// source: product/v1/create_product.proto
-
-// 创建商品
-
-package v1
-
-import (
-	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
-	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
-	reflect "reflect"
-	sync "sync"
-)
-
-const (
-	// Verify that this generated code is sufficiently up-to-date.
-	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
-	// Verify that runtime/protoimpl is sufficiently up-to-date.
-	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
-)
-
-type CreateProductReply struct {
-	state         protoimpl.MessageState
-	sizeCache     protoimpl.SizeCache
-	unknownFields protoimpl.UnknownFields
-
-	Id      uint32 `protobuf:"varint,1,opt,name=id,proto3" json:"id,omitempty"`
-	Name    string `protobuf:"bytes,2,opt,name=name,proto3" json:"name,omitempty"`
-	Message string `protobuf:"bytes,3,opt,name=message,proto3" json:"message,omitempty"`
-}
-
-func (x *CreateProductReply) Reset() {
-	*x = CreateProductReply{}
-	mi := &file_product_v1_create_product_proto_msgTypes[0]
-	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
-	ms.StoreMessageInfo(mi)
-}
-
-func (x *CreateProductReply) String() string {
-	return protoimpl.X.MessageStringOf(x)
-}
-
-func (*CreateProductReply) ProtoMessage() {}
-
-func (x *CreateProductReply) ProtoReflect() protoreflect.Message {
-	mi := &file_product_v1_create_product_proto_msgTypes[0]
-	if x != nil {
-		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
-		if ms.LoadMessageInfo() == nil {
-			ms.StoreMessageInfo(mi)
-		}
-		return ms
-	}
-	return mi.MessageOf(x)
-}
-
-// Deprecated: Use CreateProductReply.ProtoReflect.Descriptor instead.
-func (*CreateProductReply) Descriptor() ([]byte, []int) {
-	return file_product_v1_create_product_proto_rawDescGZIP(), []int{0}
-}
-
-func (x *CreateProductReply) GetId() uint32 {
-	if x != nil {
-		return x.Id
-	}
-	return 0
-}
-
-func (x *CreateProductReply) GetName() string {
-	if x != nil {
-		return x.Name
-	}
-	return ""
-}
-
-func (x *CreateProductReply) GetMessage() string {
-	if x != nil {
-		return x.Message
-	}
-	return ""
-}
-
-var File_product_v1_create_product_proto protoreflect.FileDescriptor
-
-var file_product_v1_create_product_proto_rawDesc = []byte{
-	0x0a, 0x1f, 0x70, 0x72, 0x6f, 0x64, 0x75, 0x63, 0x74, 0x2f, 0x76, 0x31, 0x2f, 0x63, 0x72, 0x65,
-	0x61, 0x74, 0x65, 0x5f, 0x70, 0x72, 0x6f, 0x64, 0x75, 0x63, 0x74, 0x2e, 0x70, 0x72, 0x6f, 0x74,
-	0x6f, 0x12, 0x0e, 0x61, 0x70, 0x69, 0x2e, 0x70, 0x72, 0x6f, 0x64, 0x75, 0x63, 0x74, 0x2e, 0x76,
-	0x31, 0x22, 0x52, 0x0a, 0x12, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x50, 0x72, 0x6f, 0x64, 0x75,
-	0x63, 0x74, 0x52, 0x65, 0x70, 0x6c, 0x79, 0x12, 0x0e, 0x0a, 0x02, 0x69, 0x64, 0x18, 0x01, 0x20,
-	0x01, 0x28, 0x0d, 0x52, 0x02, 0x69, 0x64, 0x12, 0x12, 0x0a, 0x04, 0x6e, 0x61, 0x6d, 0x65, 0x18,
-	0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04, 0x6e, 0x61, 0x6d, 0x65, 0x12, 0x18, 0x0a, 0x07, 0x6d,
-	0x65, 0x73, 0x73, 0x61, 0x67, 0x65, 0x18, 0x03, 0x20, 0x01, 0x28, 0x09, 0x52, 0x07, 0x6d, 0x65,
-	0x73, 0x73, 0x61, 0x67, 0x65, 0x42, 0x2d, 0x0a, 0x0e, 0x61, 0x70, 0x69, 0x2e, 0x70, 0x72, 0x6f,
-	0x64, 0x75, 0x63, 0x74, 0x2e, 0x76, 0x31, 0x50, 0x01, 0x5a, 0x19, 0x70, 0x72, 0x6f, 0x64, 0x75,
-	0x63, 0x74, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x70, 0x72, 0x6f, 0x64, 0x75, 0x63, 0x74, 0x2f, 0x76,
-	0x31, 0x3b, 0x76, 0x31, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
-}
-
-var (
-	file_product_v1_create_product_proto_rawDescOnce sync.Once
-	file_product_v1_create_product_proto_rawDescData = file_product_v1_create_product_proto_rawDesc
-)
-
-func file_product_v1_create_product_proto_rawDescGZIP() []byte {
-	file_product_v1_create_product_proto_rawDescOnce.Do(func() {
-		file_product_v1_create_product_proto_rawDescData = protoimpl.X.CompressGZIP(file_product_v1_create_product_proto_rawDescData)
-	})
-	return file_product_v1_create_product_proto_rawDescData
-}
-
-var file_product_v1_create_product_proto_msgTypes = make([]protoimpl.MessageInfo, 1)
-var file_product_v1_create_product_proto_goTypes = []any{
-	(*CreateProductReply)(nil), // 0: api.product.v1.CreateProductReply
-}
-var file_product_v1_create_product_proto_depIdxs = []int32{
-	0, // [0:0] is the sub-list for method output_type
-	0, // [0:0] is the sub-list for method input_type
-	0, // [0:0] is the sub-list for extension type_name
-	0, // [0:0] is the sub-list for extension extendee
-	0, // [0:0] is the sub-list for field type_name
-}
-
-func init() { file_product_v1_create_product_proto_init() }
-func file_product_v1_create_product_proto_init() {
-	if File_product_v1_create_product_proto != nil {
-		return
-	}
-	type x struct{}
-	out := protoimpl.TypeBuilder{
-		File: protoimpl.DescBuilder{
-			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
-			RawDescriptor: file_product_v1_create_product_proto_rawDesc,
-			NumEnums:      0,
-			NumMessages:   1,
-			NumExtensions: 0,
-			NumServices:   0,
-		},
-		GoTypes:           file_product_v1_create_product_proto_goTypes,
-		DependencyIndexes: file_product_v1_create_product_proto_depIdxs,
-		MessageInfos:      file_product_v1_create_product_proto_msgTypes,
-	}.Build()
-	File_product_v1_create_product_proto = out.File
-	file_product_v1_create_product_proto_rawDesc = nil
-	file_product_v1_create_product_proto_goTypes = nil
-	file_product_v1_create_product_proto_depIdxs = nil
-}
