# application/product/internal/data/models.go
@@ -1,0 +1,14 @@
+// Code generated by sqlc. DO NOT EDIT.
+// versions:
+//   sqlc v1.27.0
+
+package data
+
+type Products struct {
+	ID          int32    `json:"id"`
+	Name        string   `json:"name"`
+	Description string   `json:"description"`
+	Picture     string   `json:"picture"`
+	Price       float32  `json:"price"`
+	Categories  []string `json:"categories"`
+}
